--- a/homework/day01.html
+++ b/homework/day01.html
@@ -175,7 +175,7 @@
                                 <input class="inputValue" type="tel" placeholder="010으로시작,'-'를 꼭 입력해 주세요"/>
                             </div>
 
-                            <button class="인증btn">인증번호 요청</button>
+                            <button class="인증btn">인증번호하깅</button>
                             <button class="인증btn">인증하기</button>
 
                             <div class="inputLabel01">
