[240829] 일기장과제제출

--- a/homework/diary.html
+++ b/homework/diary.html
@@ -2,10 +2,12 @@
 <html lang="ko">
 <head>
     <title>다이어리</title>
+    <link rel="stylesheet" href="./diary.css" />
+    <script src="./diary.js"></script>
 </head>
 <body>
-    <div class="가장큰배경">
-        <div class="두번째큰배경">
+    <div class="가장큰배경" id="CSS_가장큰배경">
+        <div class="두번째큰배경" id="CSS_두번째큰배경">
             
         </div>
     </div>
