--- a/homework/diary.html
+++ b/homework/diary.html
@@ -3,11 +3,54 @@
 <head>
     <title>다이어리</title>
     <link rel="stylesheet" href="./diary.css" />
-    <script src="./diary.js"></script>
+    <!-- <script src="./diary.js"></script> -->
 </head>
 <body>
     <div class="가장큰배경" id="CSS_가장큰배경">
-        <div class="두번째큰배경" id="CSS_두번째큰배경">
+        <div class="탑">
+            <div class="헤더">
+                <div class="나의다이어리">
+                </div>
+                <div class="제목">다이어리</div>
+            </div>
+
+            <div class="로고파트">
+                <img src="./assets/로고.png">
+            </div>
+
+            <div class="메뉴">
+                <div class="메뉴이름">
+                    <img src="./assets/일기보관함.png" />
+                    <img src="./assets/사진보관함.png" />
+                </div>
+            </div>
+
+            <div class="메인화면">
+                <div class="일기쓰기">
+                    <div class="일기쓰기사진">
+                        <img src="./assets/일기 쓰기.png" />
+                    </div>
+                    <div class="작성란">
+                        <div class="기분선택">
+                            오늘 기분은 어땠나요?
+                        </div>
+                    </div>
+                    <button>
+                        <img src="./assets/등록하기.png" />
+                    </button>
+                </div>
+            </div>
+
+
+
+        </div>
+
+
+        <div class="하단배너" id="CSS_두번째큰배경">
+            <div class="하단배너꾸미기">다이어리
+                <div class="대표" >"대표: {name}"</div>
+                Copyright © 2024. {name} Co., Ltd.
+            </div>
             
         </div>
     </div>
