[240829] view 수정함(메인과 푸터간 간격 수정함)

--- a/homework/section1/index.html
+++ b/homework/section1/index.html
@@ -132,11 +132,13 @@
                 <div class="CSS_메인오른쪽_중간">
                     <div class="CSS_오늘기분">오늘기분은 어땠나요</div>
                     <div class="CSS_라디오모음">
-                        <div><input type="radio" />행복해요</div>
-                        <div><input type="radio" />슬퍼요</div>
-                        <div><input type="radio" />놀랐어</div>
-                        <div><input type="radio" />화나요</div>
-                        <div><input type="radio" />기타</div>
+                        <div class="CSS_라디오인풋"><input type="radio" />
+                            <div>행복해요</div>
+                        </div>
+                        <div class="CSS_라디오인풋"><input type="radio" />슬퍼요</div>
+                        <div class="CSS_라디오인풋"><input type="radio" />놀랐어</div>
+                        <div class="CSS_라디오인풋"><input type="radio" />화나요</div>
+                        <div class="CSS_라디오인풋"><input type="radio" />기타</div>
                     
                     </div>
                     <div class="CSS_제목">제목</div>
