--- a/homework/homework2.html
+++ b/homework/homework2.html
@@ -8,10 +8,133 @@
     <script src="./homework2.js"></script>
   </head>
   <body>
-    <header>
-      <div class="header">일기보관함_메인</div>
-    </header>
-    <main></main>
-    <footer></footer>
+    <div class="wrapper">
+      <header>
+        <div class="header-content">민지의 다이어리</div>
+      </header>
+      <main>
+        <div class="banner-area">
+          <img src="./assets/banner.png" alt="banner" />
+        </div>
+        <div class="all-contents-area">
+          <div class="contents-area">
+            <div class="contents">
+              <div class="navigate">
+                <div class="diary">일기보관함</div>
+                <div class="photo">사진보관함</div>
+              </div>
+              <div class="album-area">
+                <div class="album-wrap">
+                <div class="library">
+                  <div class="one-album">
+                    <img class="thumbnail" src="./assets/Frame-sad.png" />
+                    <div class="album-text">
+                      <div class="album-text-up">
+                        <div class="feeling">슬퍼요</div>
+                        <div class="date">2024.08.29</div>
+                      </div>
+                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
+                    </div>
+                  </div>
+                  <div class="one-album">
+                    <img class="thumbnail" src="./assets/Frame-sad.png" />
+                    <div class="album-text">
+                      <div class="album-text-up">
+                        <div class="feeling">슬퍼요</div>
+                        <div class="date">2024.08.29</div>
+                      </div>
+                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
+                    </div>
+                  </div>
+                  <div class="one-album">
+                    <img class="thumbnail" src="./assets/Frame-sad.png" />
+                    <div class="album-text">
+                      <div class="album-text-up">
+                        <div class="feeling">슬퍼요</div>
+                        <div class="date">2024.08.29</div>
+                      </div>
+                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
+                    </div>
+                  </div>
+                  <div class="one-album">
+                    <img class="thumbnail"src="./assets/Frame-sad.png"  />
+                    <div class="album-text">
+                      <div class="album-text-up">
+                        <div class="feeling">슬퍼요</div>
+                        <div class="date">2024.08.29</div>
+                      </div>
+                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
+                    </div>
+                  </div>
+                  <div class="one-album">
+                    <img class="thumbnail" src="./assets/Frame-sad.png" />
+                    <div class="album-text">
+                      <div class="album-text-up">
+                        <div class="feeling">슬퍼요</div>
+                        <div class="date">2024.08.29</div>
+                      </div>
+                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
+                    </div>
+                  </div>
+                  <div class="one-album">
+                    <img class="thumbnail"src="./assets/Frame-sad.png"  />
+                    <div class="album-text">
+                      <div class="album-text-up">
+                        <div class="feeling">슬퍼요</div>
+                        <div class="date">2024.08.29</div>
+                      </div>
+                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
+                    </div>
+                  </div>
+                  </div>
+                </div>
+                <div class="write-area">
+                  <div class="write-title-area">
+                    <div class="write-title">
+                    📍 일기 쓰기
+                    </div>
+                  </div>
+                  <div class="hows-feeling-area">
+                    <div class="feeling-title-area">
+                      <div class="feeling-title">오늘 기분은 어땠나요?</div>
+                    </div>
+                    <div class="feeling-choose">
+                      <input type="radio"> 행복해요
+                      <input type="radio"> 슬퍼요
+                      <input type="radio"> 놀랐어요
+                      <input type="radio"> 화나요
+                      <input type="radio"> 기타
+                    </div>
+                  </div>
+                  <div class="text-area">
+                    <div class="text-area-title">
+                      <div>제목</div>
+                      <input type="text" placeholder="제목을 입력해 주세요.">
+                    </div>
+                    <div class="text-area-text">
+                      <div>내용</div>
+                      <textarea placeholder="내용을 입력해 주세요."></textarea>
+                    </div>
+                  </div>
+                  <div class="button-area">
+                    <button disabled>등록하기</button>
+                  </div>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+    <footer>
+      <div class="footer">
+        <div class="footer-contents">
+          <div class="footer-content-1">민지의 다이어리</div>
+          <div class="footer-content-2">대표 : (name)</div>
+          <div class="footer-content-3">Copyright 2024(name)Co.Ltd</div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
