--- a/homework/diary.html
+++ b/homework/diary.html
@@ -11,7 +11,7 @@
             <div class="헤더">
                 <div class="나의다이어리">
                 </div>
-                <div class="제목">다이어리</div>
+                <div class="제목">나의 다이어리</div>
             </div>
 
             <div class="로고파트">
