Fix: 기분색상 변경

--- a/diary.html
+++ b/diary.html
@@ -24,22 +24,7 @@
     <main class="container-layout">
       <div class="main-content">
         <ul id="diaryList">
-          <li>
-            <button>
-              <div class="img-wrap">
-                <img src="./public/imgs/angry.svg" alt="" />
-              </div>
-              <div class="info-container">
-                <div class="tag-wrap">
-                  <p class="feeling-tag">슬퍼요</p>
-                  <p class="date-tag">2024.08.29</p>
-                </div>
-                <h3 class="title">
-                  타이틀 영역 입니다. 한줄까지만 노출 됩니다.
-                </h3>
-              </div>
-            </button>
-          </li>
+          <li class="add-list-alert">등록된 일기가 없습니다.</li>
         </ul>
       </div>
       <aside>
