[240830] CSS&JS 마스터 section01 과제제출

--- a/class-js/section01/01-02/03-dom.html
+++ b/class-js/section01/01-02/03-dom.html
@@ -13,7 +13,7 @@
             document.getElementById("HTML_제목입력하는곳").innerText = 나의이름
         }
         
-        const 프로픽등록기능 = () => {
+        const 프로필등록기능 = () => {
             document.getElementById("HTML_프로필보여주는곳").innerText = "철수"
         }
 
@@ -25,6 +25,6 @@
     </div>
     <div id="HTML_프로필보여주는곳"></div>
     <input type="text">
-    <button onclick="프로픽등록기능()">등록하기</button>
+    <button onclick="프로필등록기능">등록하기</button>
 </body>
 </html>
