day04과제_css대략완성

--- a/homework/day01.html
+++ b/homework/day01.html
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="inputLabel001">
                                     <div id="타이머" class="랜덤인증번호"></div>
-                                    <button id="인증btn02" class="인증btn02">인증하기</button>
+                                    <button id="인증btn02" class="인증btn02" onclick="인증완료()">인증하기</button>
                                 </div>
                             </div>
                             <div class="inputLabel01">
