[240829] CSS&JS 마스터 section01 필수과제 footer 추가

--- a/[240829]_section01/myDiary.html
+++ b/[240829]_section01/myDiary.html
@@ -100,7 +100,11 @@
           <button id="registerBtn" onclick="registerBtn()">등록하기</button>
         </div>
       </div>
-      <div class="footer"></div>
+      <div class="footer">
+        <div id="diaryName">민정이의 다이어리</div>
+        <div class="footerInfo">대표 : 민쨩</div>
+        <div class="footerInfo">Copyright©2024.MJCo.,Ltd.</div>
+      </div>
     </div>
   </body>
 </html>
