refactor: 다이어리 추가 기능 리팩토링

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -9,7 +9,7 @@
       <div class="header_layout">
         <div>
           <div class="header">
-            <div class="logo">민지의 다이어리</div>
+            <div class="logo">예슬이의 다이어리</div>
           </div>
           <div class="header_img_layout">
             <img
@@ -95,7 +95,7 @@
                   </div>
                 </div>
               </div>
-              <div class="diary_entry_container">
+              <!-- <div class="diary_entry_container">
                 <div class="diary_entry">
                   <img
                     class="diary_cover"
@@ -128,7 +128,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="aside">
               <div class="diary_entry_title">📍 일기 쓰기</div>
@@ -208,10 +208,10 @@
         </div>
         <div class="footer_layout">
           <div class="footer">
-            <div class="footer_title">민지의 다이어리</div>
-            <div class="footer_representative">대표 : {name}</div>
+            <div class="footer_title">예슬이의 다이어리</div>
+            <div class="footer_representative">대표 : 강예슬</div>
             <div class="footer_copyright">
-              Copyright © 2024. {name} Co., Ltd.
+              Copyright © 2024. 강예슬 Co., Ltd.
             </div>
           </div>
         </div>
