feat: 로컬스토리지를 활용해 다이어리 기록 유지 기능 추가

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -26,110 +26,7 @@
             </div>
           </div>
           <div class="main">
-            <div class="article" id="article">
-              <div class="diary_entry_container" id="diary_entry_container">
-                <div class="diary_entry">
-                  <img
-                    class="diary_cover"
-                    src="./image/sad.png"
-                    width="774px"
-                  />
-                  <div class="diary_entry_summary">
-                    <div class="emotion_date_info">
-                      <div class="emotion">슬퍼요</div>
-                      <div class="date">2024. 03. 12</div>
-                    </div>
-                    <div class="diary_title_area">
-                      타이틀 영역 입니다. 한줄까지만 노출 됩니다.
-                    </div>
-                  </div>
-                </div>
-                <div class="diary_entry">
-                  <img
-                    class="diary_cover"
-                    src="./image/surprise.png"
-                    width="774px"
-                  />
-                  <div class="diary_entry_summary">
-                    <div class="emotion_date_info">
-                      <div class="emotion">놀랐어요</div>
-                      <div class="date">2024. 03. 12</div>
-                    </div>
-                    <div class="diary_title_area">
-                      타이틀 영역 입니다. 한줄까지만 노출 됩니다.
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="diary_entry_container">
-                <div class="diary_entry" id="diaryContents">
-                  <img
-                    class="diary_cover"
-                    src="./image/upset.png"
-                    width="774px"
-                  />
-                  <div class="diary_entry_summary">
-                    <div class="emotion_date_info">
-                      <div class="emotion">화나요</div>
-                      <div class="date">2024. 03. 12</div>
-                    </div>
-                    <div class="diary_title_area">
-                      타이틀 영역 입니다. 한줄까지만 노출 됩니다.
-                    </div>
-                  </div>
-                </div>
-                <div class="diary_entry">
-                  <img
-                    class="diary_cover"
-                    src="./image/happy.png"
-                    width="774px"
-                  />
-                  <div class="diary_entry_summary">
-                    <div class="emotion_date_info">
-                      <div class="emotion">행복해요</div>
-                      <div class="date">2024. 03. 12</div>
-                    </div>
-                    <div class="diary_title_area">
-                      타이틀 영역 입니다. 한줄까지만 노출 됩니다.
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- <div class="diary_entry_container">
-                <div class="diary_entry">
-                  <img
-                    class="diary_cover"
-                    src="./image/etc.png"
-                    width="774px"
-                  />
-                  <div class="diary_entry_summary">
-                    <div class="emotion_date_info">
-                      <div class="emotion">기타</div>
-                      <div class="date">2024. 03. 12</div>
-                    </div>
-                    <div class="diary_title_area">
-                      타이틀 영역 입니다. 한줄까지만 노출 됩니다.
-                    </div>
-                  </div>
-                </div>
-                <div class="diary_entry">
-                  <img
-                    class="diary_cover"
-                    src="./image/happy.png"
-                    width="774px"
-                  />
-                  <div class="diary_entry_summary">
-                    <div class="emotion_date_info">
-                      <div class="emotion">행복해요</div>
-                      <div class="date">2024. 03. 12</div>
-                    </div>
-                    <div class="diary_title_area">
-                      타이틀 영역 입니다. 한줄까지만 노출 됩니다.
-                    </div>
-                  </div>
-                </div>
-              </div> -->
-            </div>
+            <div class="article" id="article"></div>
             <div class="aside">
               <div class="diary_entry_title">📍 일기 쓰기</div>
               <div class="diary_entry_form">
