--- a/myDiary.html
+++ b/myDiary.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="container__header">
-            <div class="header__text"> <b class="header__text" id="login__name"> </b>의 다이어리에 오신 것을 환영합니다. </div>
+            <div class="header__text"> <b class="header__text" id="header__login"> {name} </b>의 다이어리에 오신 것을 환영합니다. </div>
             <img src="./asset/header__banner.png">
         </div>
         <div class="container__nav">
@@ -21,7 +21,9 @@
         <div class="container__content">
             <div class="content__left__card">
                 <div class="wrapper__card">
-                    <img src="./asset/card__sad.png">
+                    <div class="card__img">
+                        <img src="./asset/card__sad.png">
+                    </div>
                     <div class="card__topic">
                         <div class="card__status">
                             <div class="card__sad">슬퍼요</div>
@@ -86,26 +88,26 @@
                 <div class="diary__question">오늘 기분은 어땠나요?</div>
 
                 <ul class="diary__radio">
-                    <input type="radio" id="radio__happy"/> <label for="radio__happy"> 행복해요 </label>
-                    <input type="radio" id="radio__sad"/> <label for="radio__sad"> 슬퍼요 </label>
-                    <input type="radio" id="radio__surprise"/> <label for="radio__surprise"> 놀랐어요 </label>
-                    <input type="radio" id="radio__angry"/> <label for="radio__angry"> 화나요 </label>
-                    <input type="radio" id="radio__etc"/> <label for="radio__etc"> 기타 </label>
+                    <input type="radio" name="mood" value="happy" id="radioHappy"/> <label for="radioHappy"> 행복해요 </label>
+                    <input type="radio" name="mood" value="sad" id="radioSad"/> <label for="radioSad"> 슬퍼요 </label>
+                    <input type="radio" name="mood" value="surprise" id="radioSurprise"/> <label for="radioSurprise"> 놀랐어요 </label>
+                    <input type="radio" name="mood" value="angry" id="radioAngry"/> <label for="radioAngry"> 화나요 </label>
+                    <input type="radio" name="mood" value="etc" id="radioEtc"/> <label for="radioEtc"> 기타 </label>
                 </ul>
 
                 <div class="diary__subject">제목</div>
-                <input class="diary__subInput" type="text" placeholder="제목을 입력해 주세요." />
+                <input class="diary__subInput" id="diaryTitle" type="text" placeholder="제목을 입력해 주세요." />
 
                 <div class="diary__context">내용</div>
-                <input class="diary__conInput" type="text" placeholder="내용을 입력해 주세요." />
+                <input class="diary__conInput" id="diaryContext" type="text" placeholder="내용을 입력해 주세요." />
 
-                <div class="diary__button">등록하기</div>
+                <div class="diary__button" id="diaryButton">등록하기</div>
             </div>
         </div>
 
         <div class="container__footer">
             <div class="wrapper__footer">
-                <div class="footer__text"> <b class="footer__text" id="login__name"> </b>의 다이어리 </div>
+                <div class="footer__text"> <b class="footer__text" id="footer__login"> {name} </b>의 다이어리 </div>
                 <div class="footer__name"> 대표 : {name} </div>
                 <div class="footer__copy"> Copyright © 2024. {name} Co., Ltd. </div>
             </div>
