feat: 상세 페이지로 이동하는 기능 구현

--- a/다이어리/diary-detail.html
+++ b/다이어리/diary-detail.html
@@ -1,43 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <title>diary-detail</title>
-  <link rel="stylesheet" href="./diary-detail.css" />
-</head>
-<body>
-  <div class="layout-wrapper">
-    <div class="layout">
-      <div class="header">
-        <div class="header_frame">
-          <div class="logo">예슬이의 다이어리</div>
+  <head>
+    <title>diary-detail</title>
+    <link rel="stylesheet" href="./diary-detail.css" />
+  </head>
+  <body>
+    <div class="layout-wrapper">
+      <div class="layout">
+        <div class="header">
+          <div class="header_frame">
+            <div class="logo">예슬이의 다이어리</div>
+          </div>
         </div>
-      </div>
-      <div class="main">
-        <div class="main_frame">
-          <div class="title_frame">
-            <div class="title">이것은 타이틀 입니다.</div>
-            <div class="emotion_date_frame">
-              <div class="emotion">
-                <img src="./image/happy_s.png" width="32px" />
-                <div class="mood_text">행복해요</div>
-              </div>
-              <div class="date_frame">
-                <div class="date">2024. 07. 12</div>
-                <div class="write">작성</div>
-              </div>
-            </div>
-          </div>
-          <div class="content_frame">
-            <div class="content_label">내용</div>
-            <div class="content">들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다</div>
-          </div>
-          <div class="modification_frame">
-            <button class="modification_Btn">수정</button>
-          </div>
+        <div class="main" id="main">
+          <div class="main_frame" id="main_frame"></div>
         </div>
       </div>
     </div>
-  </div>
-</body>
-<script src="./diary-detail.js"></script>
+  </body>
+  <script src="./diary-detail.js"></script>
 </html>
