fix: 텍스트 클릭 시 체크 안되는 오류 해결

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -39,8 +39,7 @@
                         id="check_happy"
                         class="mood_options"
                         name="mood"
-                      />
-                      <div for="check_happy" class="mood_text">행복해요</div>
+                      /><label for="check_happy" class="mood_text">행복해요</label>
                     </div>
                     <div class="mood_checkbox">
                       <input
